@@ -3,9 +3,12 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: GModule
-Description: Dynamic module loader for GLib
-Requires: glib-2.0
-Version: @VERSION@
-Libs: -L${libdir} @G_MODULE_LDFLAGS@ -lgmodule-1.3 @G_MODULE_LIBS@
-Cflags:
+REQUIRES="glib-2.0"
+VERSION="@VERSION@"
+CFLAGS="$CFLAGS"
+LIBS_PATH="-L${libdir} $LIBS_PATH"
+LIBS_LINK_SELF="@G_MODULE_LDFLAGS@ -lgmodule-1.3 @G_MODULE_LIBS@ $LIBS_LINK_SELF"
+LIBS_LINK_SYSTEM="$LIBS_LINK_SYSTEM"
+
+#Name: GModule
+#Description: Dynamic module loader for GLib
